# CG-FINAL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  要求.txt
docs/: 分享展示大纲.md  操作手册.md  演示操作流程.md  答辩问答预案.md  讲稿.md
docs/superpowers/plans/: 2026-06-17-final-project-aimtrainer.md
docs/superpowers/specs/: 2026-06-17-final-project-aimtrainer-design.md
media/shaders/: blinn_phong.frag  blinn_phong.vert  gun.frag  gun.vert  particle.frag  particle.vert  scope_mask.frag  scope_mask.vert  shadow_depth.frag  shadow_depth.vert  simple.frag  simple.vert  triangle.frag
source/: collision.cpp  collision.h  main.cpp  nurbs.cpp  nurbs.h  primitives.cpp  primitives.h
source/base/: application.h  model.cpp  obj_loader.cpp  obj_loader.h  skybox.cpp  texture_cubemap.cpp
source/game/: aim_trainer.cpp  aim_trainer.h  audio.cpp  audio.h  fps_camera.cpp  fps_camera.h  game_state.cpp  game_state.h  obj_sequence.cpp  obj_sequence.h  orbit_camera.cpp  orbit_camera.h  particle_system.cpp  particle_system.h
